# capability_building_class

./: .coveragerc  README.md  setup.cfg  setup.py
notebooks/: 01-run_model.ipynb  01-run_model_demo.ipynb
src/toy_example/: __init__.py  constants.py  datasets.py  model.py  performance.py  preprocessing.py  utils.py  visualisation.py
tests/: .coveragerc  datasets_test.py  model_test.py  performance_test.py  preprocessing_test.py  utils_test.py
tests/integration/: test_integration.py
tests/unit/: test_datasets.py  test_preprocessing.py  test_utils.py
