[metadata]
name = toy-example
description = Repository for the toy example as part of the 2022-07 capability building sessions
author = Faculty
author-email = info@faculty.ai
url = https://faculty.ai/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    matplotlib == 3.5.2
    numpy >= 1.18.5
    pandas >= 1.2.4
    scikit-learn == 0.24.1
    pyfoundry_sql

[options.packages.find]
where = src
exclude =
    tests

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    Faker>=8.12.1

[tool:pytest]
# Options for py.test:
addopts =
    --cov src/nel_forecasting/ --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev